--- a/templates/atualizar_venda/index.html.twig
+++ b/templates/atualizar_venda/index.html.twig
@@ -1,56 +1,57 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block breadcrumb %}Atualizar Vendas{% endblock %}
+{% block breadcrumb %}Atualizar Vendas
+{% endblock %}
 
 {% block body %}
-    <h1>Atualizar Vendas</h1>
+    <h3>Atualizar Vendas</h3>
 
-<form class="form-horizontal form-padding" method="post">
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Id</th>
-                <th>Titulo</th>
-                <th>TipoAnuncio</th>
-                <th>Endereco</th>
-                <th>Numero</th>
-                <th>Status</th>
-                <th>ValorProprietario</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for imovel in imovels %}
-            <tr>
-                <td><input type="checkbox" name="atualizar_venda[checkVenda][]" value="{{ imovel.id }}"></td>
-                <td>{{ imovel.id }}</td>
-                <td>{{ imovel.titulo }}</td>
-                <td>{{ imovel.tipoAnuncio }}</td>
-                <td>{{ imovel.endereco }}</td>
-                <td>{{ imovel.numero }}</td>
-                <td>{{ imovel.status }}</td>
-                <td>{{ imovel.valorProprietario }}</td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="22">Nenhum registro encontrado</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <form class="form-horizontal form-padding" method="post">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Código</th>
+                    <th>Titulo</th>
+                    <th>Tipo de Anúncio</th>
+                    <th>Endereço</th>
+                    <th>Número</th>
+                    <th>Status</th>
+                    <th>Valor do Proprietário</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for imovel in imovels %}
+                    <tr>
+                        <td><input type="checkbox" name="atualizar_venda[checkVenda][]" value="{{ imovel.id }}"></td>
+                        <td>{{ imovel.id }}</td>
+                        <td>{{ imovel.titulo }}</td>
+                        <td>{{ imovel.tipoAnuncio }}</td>
+                        <td>{{ imovel.endereco }}</td>
+                        <td>{{ imovel.numero }}</td>
+                        <td>{{ imovel.status }}</td>
+                        <td>{{ imovel.valorProprietario }}</td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="22">Nenhum registro encontrado</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-    <br>
-    <div class="form-group form-message-light">
-        <label class="col-md-1 control-label" for="atualizar_venda_status">Status</label>
-        <div class="col-md-4">
-            <select id="atualizar_venda_status" name="atualizar_venda[status]" class="form-control">
-                <option value="vendido">Vendido</option>
-                <option value="cancelado">Cancelado</option>
-            </select>
+        <br>
+        <div class="form-group form-message-light">
+            <label class="col-md-1 control-label" for="atualizar_venda_status">Status</label>
+            <div class="col-md-4">
+                <select id="atualizar_venda_status" name="atualizar_venda[status]" class="form-control">
+                    <option value="vendido">Vendido</option>
+                    <option value="cancelado">Cancelado</option>
+                </select>
+            </div>
         </div>
-    </div>
-    <br>
-    <button class="btn btn-primary" type="submit">Atualizar</button>
+        <br>
+        <button class="btn btn-primary btn-rounded" type="submit">Atualizar</button>
 
-</form>
+    </form>
 {% endblock %}
