--- a/templates/imobiliaria_atuacao/_form.html.twig
+++ b/templates/imobiliaria_atuacao/_form.html.twig
@@ -1,5 +1,7 @@
 <form class="form-horizontal form-padding" method="post">
 
+<fieldset>
+    <legend>Informações Gerais</legend>
     <div class="form-group form-message-light">
         <label class="col-md-3 control-label" for="{{ form.fkImobiliariaId.vars['id'] }}">Imobiliária</label>
         <div class="col-md-4">
@@ -20,7 +22,8 @@
             {{ form_widget(form.fkCidadeId) }}
         </div>
     </div>
+</fieldset>
 
-    <button class="btn btn-primary" type="submit">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-primary btn-rounded pull-right" type="submit">{{ button_label|default('Salvar') }}</button>
 
 </form>
