--- a/templates/imobiliaria_atuacao/show.html.twig
+++ b/templates/imobiliaria_atuacao/show.html.twig
@@ -1,22 +1,34 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block breadcrumb %}ImobiliariaAtuacao{% endblock %}
+{% block breadcrumb %}Locais de atuação{% endblock %}
 
 {% block body %}
-    <h1>ImobiliariaAtuacao</h1>
+    <h3>Tudo Imóveis</h3>
+    {{ include('imobiliaria_atuacao/_delete_form.html.twig') }}
+    <br><br>
 
-    <table class="table">
+    <table class="table table-striped">
         <tbody>
+            <tr>
+                <td colspan="2">Informações Gerais</td>
+            </tr>
             <tr>
                 <th>Id</th>
                 <td>{{ imobiliaria_atuacao.id }}</td>
             </tr>
+            <tr>
+                <th>Estado</th>
+                <td>{% if imobiliaria_atuacao.fkEstadoId is defined %}{{ imobiliaria_atuacao.fkEstadoId.nome }}{% endif %}</td>
+            </tr>
+            <tr>
+                <th>Cidade</th>
+                <td>{% if imobiliaria_atuacao.fkCidadeId is defined %}{{ imobiliaria_atuacao.fkCidadeId.nome }}{% endif %}</td>
+            </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('imobiliaria_atuacao_index') }}">Voltar</a>
+    <a class="btn btn-default btn-rounded" href="{{ path('imobiliaria_atuacao_index') }}">Voltar</a>
 
-    <a href="{{ path('imobiliaria_atuacao_edit', {'id': imobiliaria_atuacao.id}) }}">Editar</a>
+    <a class="pull-right btn btn-primary btn-rounded" href="{{ path('imobiliaria_atuacao_edit', {'id': imobiliaria_atuacao.id}) }}">Editar</a>
 
-    {{ include('imobiliaria_atuacao/_delete_form.html.twig') }}
 {% endblock %}
