--- a/templates/imobiliaria_atuacao/index.html.twig
+++ b/templates/imobiliaria_atuacao/index.html.twig
@@ -33,7 +33,9 @@
         {% endfor %}
         </tbody>
     </table>
-
+    <div class="navigation">
+        {{ knp_pagination_render(imobiliaria_atuacaos) }}
+    </div>
     <div>
         <a class="btn btn-dark btn-rounded" href="{{ path('imobiliaria_atuacao_new') }}">Cadastrar</a>
     </div>
