--- a/templates/imovel/index.html.twig
+++ b/templates/imovel/index.html.twig
@@ -40,7 +40,9 @@
         {% endfor %}
         </tbody>
     </table>
-    
+    <div class="navigation">
+        {{ knp_pagination_render(imovels) }}
+    </div>
     <div>
         <a class="btn btn-dark btn-rounded" href="{{ path('imovel_new') }}">Cadastrar</a>
     </div>
