--- a/templates/tipo_imovel/index.html.twig
+++ b/templates/tipo_imovel/index.html.twig
@@ -27,7 +27,9 @@
         {% endfor %}
         </tbody>
     </table>
-
+    <div class="navigation">
+        {{ knp_pagination_render(tipo_imovels) }}
+    </div>
     <div>
         <a class="btn btn-dark btn-rounded" href="{{ path('tipo_imovel_new') }}">Cadastrar</a>
     </div>
