--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block breadcrumb %}Edit Usuário{% endblock %}
+{% block breadcrumb %}Atualizar Usuários{% endblock %}
 
 {% block extracss %}
 <style>
@@ -11,13 +11,14 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Edit Usuário</h1>
-
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('user_index') }}">Voltar</a>
-
+    <h3>Atualizar usuário</h3>
     {{ include('user/_delete_form.html.twig') }}
+    <br>
+
+    {{ include('user/_form.html.twig', {'button_label': 'Atualizar'}) }}
+
+    <a class="btn btn-default btn-rounded" href="{{ path('user_index') }}">Voltar</a>
+
 {% endblock %}
 
 {% block extrajavascript %}
