--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,10 +3,15 @@
 {% block breadcrumb %}Gerenciar Usuários{% endblock %}
 
 {% block body %}
-    <h1>Usuário</h1>
+    <h3>{{ pessoa.nome }}</h3>
+    {{ include('user/_delete_form.html.twig') }}
+    <br><br>
 
-    <table class="table">
+    <table class="table table-striped">
         <tbody>
+            <tr>
+                <td colspan="2">Informações Pessoais</td>
+            </tr>
             <tr>
                 <th>Id</th>
                 <td>{{ pessoa.id }}</td>
@@ -14,18 +19,6 @@
             <tr>
                 <th>Nome</th>
                 <td>{{ pessoa.nome }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ pessoa.email }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ pessoa.roles ? pessoa.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ pessoa.password }}</td>
             </tr>
             <tr>
                 <th>Cpf</th>
@@ -36,16 +29,27 @@
                 <td>{{ pessoa.rg }}</td>
             </tr>
             <tr>
-                <th>TelefonePrincipal</th>
+                <th>Email</th>
+                <td>{{ pessoa.email }}</td>
+            </tr>
+            <tr>
+                <th>Acessos</th>
+                <td>{{ pessoa.roles ? pessoa.roles|json_encode : '' }}</td>
+            </tr>
+            <tr>
+                <th>Telefone Principal</th>
                 <td>{{ pessoa.telefonePrincipal }}</td>
             </tr>
             <tr>
-                <th>TelefoneSecundario</th>
+                <th>Telefone Secundário</th>
                 <td>{{ pessoa.telefoneSecundario }}</td>
             </tr>
             <tr>
                 <th>Usuario</th>
                 <td>{{ pessoa.usuario }}</td>
+            </tr>
+            <tr>
+                <td colspan="2">Endereço</td>
             </tr>
             <tr>
                 <th>Endereco</th>
@@ -64,19 +68,18 @@
                 <td>{{ pessoa.complemento }}</td>
             </tr>
             <tr>
-                <th>Cliente</th>
+                <th>É cliente?</th>
                 <td>{{ pessoa.cliente ? 'Sim' : 'Não' }}</td>
             </tr>
             <tr>
-                <th>Administrador</th>
+                <th>É administrador?</th>
                 <td>{{ pessoa.administrador ? 'Sim' : 'Não' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('user_index') }}">Voltar</a>
+    <a class="btn btn-default btn-rounded" href="{{ path('user_index') }}">Voltar</a>
 
-    {# <a href="{{ path('user_edit', {'id': pessoa.id}) }}">Editar</a> #}
+    <a class="pull-right btn btn-primary btn-rounded" href="{{ path('user_edit', {'id': pessoa.id}) }}">Editar</a>
 
-    {# {{ include('user/_delete_form.html.twig') }} #}
 {% endblock %}
