--- a/templates/busca_imovel/index.html.twig
+++ b/templates/busca_imovel/index.html.twig
@@ -176,9 +176,26 @@
                 <!-- FOOTER -->
                 <footer id="footer">
 
-                    <p class="pad-lft">©{{ "now" | date("Y") }}
-                        - Fhabiana Machado</p>
-
+                    <div class="container">
+                    
+                        <div class="row">
+                            <ul>
+                                <li>
+                                    {{ imobiliaria.nomeFantasia }} - Todos os direitos reservados &#174;
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank"><i class="ti-facebook"></i></a>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/ftmachado" target="_blank"><i class="ti-github"></i></a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank"><i class="ti-instagram"></i></a>
+                                </li>
+                            </ul>
+                            <p class="pull-right">©{{ "now" | date("Y") }} - Fhabiana Machado</p>
+                        </div>
+                    </div>
                 </footer>
                 <!-- END FOOTER -->
 
